test-harness/src/snapshots/toolchain__enum-struct-variant+into-coq.snap
---
source: test-harness/src/harness.rs
expression: out
info:
  optional: false
  broken: true
  issue_id: ~
  positive: true
---
serr = '''
Compiling enum-struct-variant v0.1.0 (WORKSPACE_ROOT/enum-struct-variant)
error[CE0001]: Diagnostics.Context.ThirImport: Unimplemented { issue_id: None, details: Some("type Dynamic") }
 --> enum-struct-variant/src/lib.rs:5:5
  |
5 |     value: u64,
  |     ^^^^^^^^^^

error: could not compile `enum-struct-variant` due to previous error'''
sout = ''
exit = 101
